--- a/src/style/pages/main.css
+++ b/src/style/pages/main.css
@@ -1685,7 +1685,7 @@ section.help_desk .help_desk_grid-wrapper .parkon-2 .parkon_title {
     line-height: 26px;
     /*margin-bottom: 70px;*/
     margin-bottom: 40px;
-    max-width: 520px;
+    /*max-width: 520px;*/
 }
 
 section.help_desk .help_desk_grid-wrapper .parkon-2 .parkon_text {
