--- a/src/style/style_models.css
+++ b/src/style/style_models.css
@@ -9,6 +9,43 @@
 /*    height: 100%;*/
 /*}*/
 
+/*.Mytext {*/
+/*    display: none;*/
+/*    max-width: 280px;*/
+/*    !*width: 100%;*!*/
+/*    height: auto;*/
+/*}*/
+
+/*.tooltip_wrapper {*/
+/*    display: flex;*/
+/*    background: rgba(9, 9, 9, 0.50);*/
+/*    backdrop-filter: blur(6px);*/
+/*    -webkit-backdrop-filter: blur(6px);*/
+/*    border-radius: 16px;*/
+/*    padding: 20px;*/
+/*    gap: 16px;*/
+/*}*/
+
+/*.tooltip {*/
+/*    font-family: 'MoscowSans', sans-serif;*/
+/*    font-size: 18px;*/
+/*    font-weight: 300;*/
+/*    color: white;*/
+/*}*/
+
+/*.tooltip_wrapper svg {*/
+/*    min-width: min-content;*/
+/*}*/
+
+/*.Mytext.show {*/
+/*    display: block;*/
+/*}*/
+
+/*.Mytext.hide {*/
+/*    display: none;*/
+/*}*/
+
+
 html.a-fullscreen {
     bottom: 0;
     left: 0;
@@ -94,71 +131,19 @@ a-scene {
     background-color: #FF69B4;
 }
 
-/*.Mytext {*/
-/*    display: none;*/
-/*    max-width: 280px;*/
-/*    !*width: 100%;*!*/
-/*    height: auto;*/
-/*}*/
-
-/*.tooltip_wrapper {*/
-/*    display: flex;*/
-/*    background: rgba(9, 9, 9, 0.50);*/
-/*    backdrop-filter: blur(6px);*/
-/*    -webkit-backdrop-filter: blur(6px);*/
-/*    border-radius: 16px;*/
-/*    padding: 20px;*/
-/*    gap: 16px;*/
-/*}*/
-
-/*.tooltip {*/
-/*    font-family: 'MoscowSans', sans-serif;*/
-/*    font-size: 18px;*/
-/*    font-weight: 300;*/
-/*    color: white;*/
-/*}*/
-
-/*.tooltip_wrapper svg {*/
-/*    min-width: min-content;*/
-/*}*/
-
-/*.Mytext.show {*/
-/*    display: block;*/
-/*}*/
-
-/*.Mytext.hide {*/
-/*    display: none;*/
-/*}*/
-
-
 /*header*/
-
-/*.header {*/
-/*    position: relative;*/
-/*    z-index: 5;*/
-/*    background-color: #090909;*/
-/*}*/
 
 /*прозрачный фон*/
 .header {
     position: absolute;
-    /*top: 0;*/
-    /*left: 0;*/
-    /*top: 30px;*/
     top: 28px;
     left: 60px;
     pointer-events: none;
-    /*right: 0;*/
     z-index: 5;
     background-color: transparent;
-    /*max-height: 92px;*/
-    /*height: 100%;*/
 }
 
-
-.header__wrapper, .header__logo
-/*.header__info*/
-{
+.header__wrapper, .header__logo {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -169,8 +154,6 @@ a-scene {
     width: 100%;
     cursor: pointer;
     text-decoration: none;
-
-    /*прозрачный фон*/
     pointer-events: all;
 }
 
@@ -181,55 +164,9 @@ a-scene {
     margin-left: 12px;
 }
 
-/*.header__info {*/
-/*    max-width: 300px;*/
-/*    width: 100%;*/
-/*}*/
-
-/*.header__info-descr {*/
-/*    width: 148px;*/
-/*    margin-left: 10px;*/
-/*}*/
-
 .header__logo-text {
     color: white;
 }
-
-/*.header__info-title {*/
-/*    font-family: 'MoscowSans', sans-serif;*/
-/*    font-weight: 300;*/
-/*    font-size: 16px;*/
-/*}*/
-
-/*.header__info-text {*/
-/*    font-family: 'MoscowSans', sans-serif;*/
-/*    margin-top: 4px;*/
-/*    font-weight: 300;*/
-/*    font-size: 12px;*/
-/*    opacity: 0.4;*/
-/*}*/
-
-/*.header__info-img {*/
-/*    width: 142px;*/
-/*    object-fit: cover;*/
-/*}*/
-
-/*.header__info-img#veloPrev {*/
-/*    visibility: hidden;*/
-/*}*/
-
-
-/*прозрачный фон*/
-/*main.models {*/
-/*    position: absolute;*/
-/*    !*top: 80px;*!*/
-/*    top: 92px;*/
-/*    left: 0;*/
-/*    right: 0;*/
-/*    bottom: 0;*/
-/*}*/
-
-
 
 
 /*магия уголков начата*/
@@ -296,17 +233,13 @@ a-scene {
 /*магия уголков закончена*/
 
 
-
-
 /*tech_spec*/
 
 .tech_spec {
     position: absolute;
-    /*top: 92px;*/
     top: 84px;
     left: 30px;
     z-index: 2;
-    /*width: fit-content;*/
     width: 100%;
 }
 
@@ -327,13 +260,6 @@ a-scene {
     max-width: unset;
 }
 
-/*.tech_spec__wrapper.hidden {*/
-/*    max-width: fit-content;*/
-/*}*/
-
-
-/*Тест стилей grid tech_spec__description*/
-
 .tech_spec__description {
     padding: 20px 30px;
     background: rgba(9, 9, 9, 0.50);
@@ -342,21 +268,6 @@ a-scene {
     border-radius: 30px;
     transition: all .8s ease;
 }
-
-/*.tech_spec .tech_spec__description .tech_spec__description-grid_wrapper {*/
-/*    display: grid;*/
-/*    grid-template-columns: 1fr;*/
-/*    grid-template-rows: repeat(4, max-content);*/
-/*    gap: 24px;*/
-/*    grid-auto-flow: row;*/
-/*    grid-template-areas:*/
-/*    "tech_spec__titles"*/
-/*    "tech_spec__mission"*/
-/*    "tech_spec__outfit"*/
-/*    "tech_spec__button";*/
-/*    max-width: 350px;*/
-/*    transition: all .8s ease;*/
-/*}*/
 
 
 .tech_spec .tech_spec__description .tech_spec__description-grid_wrapper {
@@ -404,8 +315,6 @@ a-scene {
     grid-area: tech_spec__outfit-panel;
 }
 
-
-
 .tech_spec__button .tech_spec__btn {
     max-width: max-content;
 }
@@ -416,10 +325,9 @@ a-scene {
 .tech_spec__outfit {
     opacity: 1;
     height: auto;
-    pointer-events: auto; /* Включаем обработку событий мыши по умолчанию */
-    overflow: hidden; /* Скрываем содержимое, которое не помещается в высоту блока */
-    max-height: 1000px; /* Максимальная высота блока */
-    /*transition: opacity 0.5s ease, max-height 0.5s cubic-bezier(0.5, 0.5, 0.5, 0.5);*/
+    pointer-events: auto;
+    overflow: hidden;
+    max-height: 1000px;
     transition: all .8s ease;
 }
 
@@ -427,7 +335,6 @@ a-scene {
 .tech_spec__outfit.hidden,
 .tech_spec__mission-panel.hidden,
 .tech_spec__outfit-panel.hidden {
-    /*display: none;*/
     opacity: 0;
     padding: 0;
     max-height: 0; /* Устанавливаем максимальную высоту блока на 0 */
@@ -435,15 +342,10 @@ a-scene {
 }
 
 .tech_spec__titles.hidden {
-    /*margin-bottom: 24px;*/
     margin-bottom: 20px;
 }
 
-
-
-
 .tech_spec__titles .text_spec__texts, .tech_spec__mission {
-    /*margin-bottom: 24px;*/
     margin: 0;
 }
 
@@ -451,20 +353,17 @@ a-scene {
     font-family: 'MoscowSans', sans-serif;
     font-weight: 800;
     font-size: 30px;
-    /*margin-bottom: 8px;*/
 }
 
 .tech_spec__subtitle {
     font-family: 'MoscowSans', sans-serif;
     font-weight: 300;
-    /*font-size: 20px;*/
     font-size: 18px;
     opacity: 0.4;
     margin-top: 5px;
 }
 
 .tech_spec__mission-panel {
-    /*margin-bottom: 12px;*/
     padding: 10px 0;
 }
 
@@ -473,7 +372,6 @@ a-scene {
     font-weight: 800;
     font-size: 18px;
     text-align: center;
-    /*margin-bottom: 12px;*/
 }
 
 .tech_spec__text-descr {
@@ -483,18 +381,12 @@ a-scene {
 }
 
 .tech_spec__outfit {
-    /*margin-bottom: 4px;*/
     margin: 0;
 }
 
 .tech_spec__outfit-panel {
     padding: 10px 0;
-    /*margin-bottom: 16px;*/
 }
-
-/*.tech_spec__outfit .tech_spec__text {*/
-/*    margin-bottom: 16px;*/
-/*}*/
 
 .tech_spec__outfit-list {
     display: flex;
@@ -506,7 +398,6 @@ a-scene {
 .tech_spec__outfit-item {
     max-width: 80px;
     width: 100%;
-    /*margin-bottom: 20px;*/
     text-align: center;
 }
 
@@ -570,18 +461,6 @@ a-scene {
     transform: rotate(0) scale(1);
 }
 
-/*.tech_spec__btn:hover {*/
-/*    background-color: #313131;*/
-/*}*/
-
-/*.tech_spec__btn:hover img {*/
-/*    transform: rotate(180deg) scale(1.2) translateY(-2px);*/
-/*}*/
-
-/*.tech_spec__btn:hover img.rotate {*/
-/*    transform: rotate(0) scale(1.2) translateY(-2px);*/
-/*}*/
-
 
 .tech_spec__interior {
     position: absolute;
@@ -589,29 +468,17 @@ a-scene {
     right: 60px;
     max-width: 200px;
     width: 100%;
-    /*height: 124px;*/
     height: 174px;
     display: flex;
     flex-direction: column;
-    /*align-items: flex-end;*/
-    /*justify-content: flex-end;*/
     align-items: center;
     justify-content: space-between;
     border-radius: 20px;
-    /*background: url("../img/layout/amarok_prew.png") no-repeat center/cover;*/
-
     background: rgba(9, 9, 9, 0.50);
     backdrop-filter: blur(6px);
     -webkit-backdrop-filter: blur(6px);
-
-    /*padding: 8px;*/
-
     padding-top: 16px;
-
     cursor: pointer;
-    /*margin-top: 20px;*/
-    /*margin-right: 60px;*/
-    /*z-index: 1 !important;*/
     z-index: 1;
 }
 
@@ -644,14 +511,6 @@ a-scene {
     background-image: url("../img/layout/pages/main/slider/ford.png");
 }
 
-/*.tech_spec__interior#solaris_green {*/
-/*    background: url("../img/layout/amarok_prew.png") no-repeat center/cover;*/
-/*}*/
-
-/*.tech_spec__interior#solaris_green.garage_solaris_green {*/
-/*    background-image: url("../img/layout/slider/solaris_green.png");*/
-/*}*/
-
 .tech_spec__interior#solaris_gray .tech_spec__interior-wrapper {
     background: url("../img/layout/interior_prew/solaris_gray_prew.png") no-repeat center/cover;
 }
@@ -670,7 +529,6 @@ a-scene {
 
 .tech_spec__interior#kater .tech_spec__interior-wrapper {
     background: url("../img/layout/interior_prew/kater_prew.png") no-repeat center/cover;
-    /*display: none;*/
 }
 
 .tech_spec__interior#kater.garage_kater .tech_spec__interior-wrapper {
@@ -686,17 +544,8 @@ a-scene {
 }
 
 .tech_spec__interior#velo {
-    /*background: url("../img/layout/velo_prew.png") no-repeat center/cover;*/
     display: none;
 }
-
-/*.tech_spec__interior#velo.garage_velo .tech_spec__interior-wrapper {*/
-/*    background-image: url("../img/layout/slider/velo.png");*/
-/*}*/
-
-/*.tech_spec__interior:hover .arrow-wrapper img {*/
-/*    margin-left: 3px;*/
-/*}*/
 
 .tech_spec__interior-btn {
     display: flex;
@@ -704,7 +553,6 @@ a-scene {
     justify-content: space-between;
     max-width: 80px;
     width: 100%;
-
     position: absolute;
     right: 8px;
     bottom: 8px;
@@ -752,14 +600,11 @@ a-scene {
 
 .auto_park {
     position: fixed;
-    /*bottom: 0;*/
     bottom: -5px;
     left: 0;
     right: 0;
     z-index: 3;
-    /*margin-bottom: 60px;*/
     transition: transform 0.3s ease;
-    /*transform: translateY(100%);*/
     transform: translateY(74%);
     pointer-events: none;
 }
@@ -783,9 +628,7 @@ a-scene {
     -webkit-backdrop-filter: blur(6px);
     border-radius: 12px;
     height: 224px;
-    /*padding: 20px;*/
     padding: 19px;
-    /* width: min-content; */
     width: 100%;
     max-width: 850px;
     pointer-events: all;
@@ -808,14 +651,6 @@ a-scene {
     transform: rotate(0);
 }
 
-/*.auto_park__control:hover img {*/
-/*    transform: rotate(180deg) scale(1.2) translateY(-4px);*/
-/*}*/
-
-/*.auto_park__control:hover img.rotate  {*/
-/*    transform: rotate(0) scale(1.2) translateY(-4px);*/
-/*}*/
-
 .auto_park__title {
     font-family: 'MoscowSans', sans-serif;
     font-weight: 800;
@@ -834,24 +669,16 @@ a-scene {
 .auto_park_slider-wrapper {
     display: flex;
     transition: transform 0.3s ease;
-
     width: 5000px;
-    /*width: max-content;*/
 }
 
 .gallery_item {
     cursor: pointer;
-    /*margin: 0 2px;*/
     flex-shrink: 0;
     border-radius: 10px;
     border: 1px solid #090909;
     transition: transform 0.3s ease;
-
     max-height: 140px;
-
-    /*display: flex;*/
-    /*align-items: center;*/
-    /*justify-content: center;*/
 }
 
 .gallery_item picture {
@@ -866,20 +693,10 @@ a-scene {
     display: block;
 }
 
-/*.gallery_item:hover, .gallery_item.active {*/
-/*    border: 1px solid #62A744;*/
-/*}*/
-
-/*.gallery_item:hover img, .gallery_item.active img {*/
-/*    filter: grayscale(0);*/
-/*}*/
-
 .gallery_item img {
     object-fit: cover;
     filter: grayscale(100%);
     transition: transform 0.3s ease;
-    /* width: 210px;
-    height: 140px; */
     width: 100%;
     height: 100%;
     max-height: 140px;
@@ -887,10 +704,7 @@ a-scene {
 }
 
 .auto_park_slider-button {
-    /*position: relative;*/
-
     position: absolute;
-
     display: flex;
     align-items: center;
     justify-content: center;
@@ -898,7 +712,6 @@ a-scene {
     top: 50%;
     transform: translate(-50%, -50%);
     width: 100%;
-    /*visibility: hidden;*/
 }
 
 .auto_park_slider-button button {
@@ -921,12 +734,10 @@ a-scene {
 .auto_park_slider-button button.prev_button {
     position: absolute;
     left: 0;
-    /*bottom: 58px;*/
 }
 
 .auto_park_slider-button button.next_button {
     transform: rotate(180deg);
     position: absolute;
     right: 0;
-    /*bottom: 58px;*/
 }
